--- a/plugin/eventsetter/list_event_setter.rhtml
+++ b/plugin/eventsetter/list_event_setter.rhtml
@@ -7,13 +7,40 @@
 		<div><a href="/wlg/setting/event/add" class="btn btn-success">Click Add New Event</a></div>
 		<fieldset>
 			<legend>Event List</legend>
-			<div>
-				<ul class="nav nav-pills nav-stacked">
-					<%content.map do |cont|%>
-						<li><a href="/wlg/setting/event/list/<%=cont.nid.to_i%>"><%= cont.time%><%= cont.title%></a></li>
-					<%end%>
-				</ul>
-			</div>
+			<%if !page.nil?%>
+				<div>
+					<ul class="nav nav-pills nav-stacked">
+						<%page.content.map do |cont|%>
+							<li><a href="/wlg/setting/event/list/<%=cont.nid.to_i%>"><%= cont.time%><%= cont.title%></a></li>
+						<%end%>
+					</ul>
+				</div>
+				<%if page.sum_pages_length > 1%>
+					<div class="pagination pagination-center">
+						<ul>
+							<%if page.now_page == 1%>
+								<li class="disabled"><a href="#">&#x2190;</a></li>
+							<%else%>
+								<li><a href="/wlg/setting/event/page/1">&#x2190;</a></li>
+							<%end%>
+							<%page.sum_pages_length.times do |t|%>
+								<%if t + 1 == page.now_page%>
+									<li class="active"><a href="#"><%= t + 1%></a></li>
+								<%else%>
+									<li><a href="/wlg/setting/event/page/<%=t + 1%>"><%= t + 1%></a></li>
+								<%end%>
+							<%end%>
+							<%if page.now_page == page.sum_pages_length%>
+								<li class="disabled"><a href="#">&#x2192;</a></li>
+							<%else%>
+								<li><a href="/wlg/setting/event/page/<%=page.sum_pages_length%>">&#x2192;</a></li>
+							<%end%>
+						</ul>
+					</div>
+				<%end%>
+			<%else%>
+				<div><h3>Event Empty</h3></div>
+			<%end%>
 		</fieldset>
 	</div>
 	<div class="alert" id="l_alert" style="display: none;margin-top: 4px;margin-left: 18px; box-shadow: 0 1px 1px;">
