--- a/2/plugin/eventsetter/list_detailed_event.rhtml
+++ b/2/plugin/eventsetter/list_detailed_event.rhtml
@@ -4,17 +4,17 @@
 <!--<script language="Javascript" type="text/javascript" src="/bootstrap/js/bootstrap-wysihtml5.zh-CN.js"></script>-->
 <div class="container" style="margin-top: 20px; margin-left: 100px;">
 	<div>
-		<a href="/wlg/setting/event/edit/<%=event.nid.to_i%>" class="btn btn-success a_e_edit">Edit</a>
+		<a href="/wlg/setting/event/edit/<%=nid.to_i%>" class="btn btn-success a_e_edit">Edit</a>
 		<a href="/wlg/setting/event/page" class="btn btn-link a_e_return">Return</a>
 	</div>
 	<div>
-		<h3><%=event.title%></h3>
+		<h3><%=title%></h3>
 	</div>
-	<div><%=event.time%></div>
-	<div><%=event.location%></div>
-	<div><%=event.content%></div>
+	<div><%=time%></div>
+	<div><%=location%></div>
+	<div><%=content%></div>
 	<div>
-		<a href="/wlg/setting/event/edit/<%=event.nid%>" class="btn btn-success a_e_edit">Edit</a>
+		<a href="/wlg/setting/event/edit/<%=nid.to_i%>" class="btn btn-success a_e_edit">Edit</a>
 		<a href="/wlg/setting/event/page" class="btn btn-link a_e_return">Return</a>
 	</div>
 </div>
