--- a/3/plugin/affairsetter/edit.rhtml
+++ b/3/plugin/affairsetter/edit.rhtml
@@ -35,8 +35,9 @@
 				</div>
 				<div class="control-group">
 					<div class="controls">
-						<button class="btn btn-success a_e_save">Save</button>
-						<a href="/wlg/setting/affair/page" class="btn btn-link a_e_cancel">Cancel</a>
+						<button class="btn btn-success a_e_update">Save</button>
+						<a href="/wlg/setting/affair/page" class="btn btn-link">Cancel</a>
+						<input type="hidden" id="hidden_nid" value="<%=nid%>">
 					</div>
 				</div>
 
@@ -49,4 +50,4 @@
 	</div>
 </div>
 <script language="Javascript" type="text/javascript" src="/js/base_setter.js"></script>
-<script language="Javascript" type="text/javascript" src="/js/affair_setter.js"></script>
+<script language="Javascript" type="text/javascript" src="/js/edit_affair.js"></script>
