--- a/3/plugin/setter/admin_setter.rhtml
+++ b/3/plugin/setter/admin_setter.rhtml
@@ -64,13 +64,13 @@
               Whlug
               </li>
               <li>
-              <a href="#">事务公告</a>
+              <a href="/wlg/setting/affair">事务公告</a>
               </li>
               <li>
-              <a href="#">活动公告</a>
+              <a href="/wlg/setting/event">活动公告</a>
               </li>
               <li>
-              <a href="#">活动回顾</a>
+              <a href="/wlg/setting/summary">活动回顾</a>
               </li>
               <li class="divider">
               </li>
