--- a/3/plugin/summarysetter/edit.rhtml
+++ b/3/plugin/summarysetter/edit.rhtml
@@ -2,12 +2,15 @@
 <script language="Javascript" type="text/javascript" src="/bootstrap/js/bootstrap-wysihtml5.js"></script>
 <ol class="breadcrumb">
 	<li>
-	<a href="/wlg/setting/affair">事务公告</a> <span class="divider">/</span>
+	<a href="/wlg/setting/summary">活动回顾</a> <span class="divider">/</span>
 	</li>
 	<li class="active">
-	添加事务
+	编辑
 	</li>
 </ol>
+<div style="margin-bottom: 10px;">
+	<a href="/wlg/setting/summary/delete/<%=nid%>" class="btn btn-danger">删除此条事务</a>
+</div>
 <div class="container" style="width: 720px;">
 	<fieldset>
 		<div style="margin-left: -48px; magin-top: 20px;">
@@ -15,25 +18,26 @@
 				<div class="control-group">
 					<label class="control-label" for="e_s_title">Title</label>
 					<div class="controls">
-						<input type="text" id="e_s_title" placeholder="Affair Title" />
+						<input type="text" id="e_s_title" placeholder="Summary Title" value="<%=title%>"/>
 					</div>
 				</div>
 				<div class="control-group">
 					<label class="control-label" for="e_s_writer">Writer</label>
 					<div class="controls">
-						<input type="text" id="e_s_writer" placeholder="Affair Edit Writer" />
+						<input type="text" id="e_s_writer" placeholder="Summary Edit Writer" value="<%=writer%>"/>
 					</div>
 				</div>
 				<div class="control-group">
 					<label class="control-label" for="e_s_content">Content</label>
 					<div class="controls">
-						<textarea id="e_s_content" placeholder="Content" style="width: 500px; height: 400px;"></textarea>
+						<textarea id="e_s_content" placeholder="Content" style="width: 500px; height: 400px;"><%=content%></textarea>
 					</div>
 				</div>
 				<div class="control-group">
 					<div class="controls">
-						<button class="btn btn-success a_e_save">Save</button>
-						<a href="/wlg/setting/affair/page" class="btn btn-link">Cancel</a>
+						<button class="btn btn-success a_e_update">Save</button>
+						<a href="/wlg/setting/summary/page" class="btn btn-link">Cancel</a>
+						<input type="hidden" id="hidden_nid" value="<%=nid%>">
 					</div>
 				</div>
 
@@ -46,4 +50,4 @@
 	</div>
 </div>
 <script language="Javascript" type="text/javascript" src="/js/base_setter.js"></script>
-<script language="Javascript" type="text/javascript" src="/js/affair_setter.js"></script>
+<script language="Javascript" type="text/javascript" src="/js/edit_summary.js"></script>
