--- a/3/plugin/eventsetter/page.rhtml
+++ b/3/plugin/eventsetter/page.rhtml
@@ -1,26 +1,31 @@
+<div style="margin-bottom: 10px;">
+	<a href="/wlg/setting/event/add" class="btn btn-success"><i class="icon-plus-sign"></i>添加活动</a>
+</div>
 <ol class="breadcrumb">
 	<li>
-	<a href="/wlg/setting/activity">活动公告</a> <span class="divider">/</span>
+	<a href="/wlg/setting/event">活动公告</a> <span class="divider">/</span>
 	</li>
 	<li class="active">
 	活动列表
 	</li>
 </ol>
 <div class="container span11 list">
-	<%if !content.empty?%>
+	<%if !content.nil? and !content.empty?%>
 		<%content.map do |list|%>
-			<a href="/wlg/setting/activity/list/<%=list.nid%>"><%=list.title%><span><%=list.time%></span></a>
+			<a href="/wlg/setting/event/list/<%=list.nid%>"><%=list.title%><span><%=list.time%></span></a>
 			<hr />
 		<%end%>
+	<%else%>
+		<div>没有活动</div>
 	<%end%>
 </div>
-<%if !left_page.nil? and !right_page.nil?%>
+<%if !left_page.nil? or !right_page.nil?%>
 <ul class="pager">
 	<%if !left_page.nil?%>
-		<li><a href="/wlg/setting/activity/page/<%=left_page%>">>前一页</a></li>
+		<li><a href="/wlg/setting/event/page/<%=left_page%>">前一页</a></li>
 	<%end%>
 	<%if !right_page.nil?%>
-		<li><a href="/wlg/setting/activity/page/<%=right_page%>">>后一页</a></li>
+		<li><a href="/wlg/setting/event/page/<%=right_page%>">后一页</a></li>
 	<%end%>
 </ul>
 <%end%>
