--- a/3/plugin/eventsetter/edit.rhtml
+++ b/3/plugin/eventsetter/edit.rhtml
@@ -5,11 +5,11 @@
 	<a href="/wlg/setting/event">活动公告</a> <span class="divider">/</span>
 	</li>
 	<li class="active">
-	编辑活动
+	编辑
 	</li>
 </ol>
 <div style="margin-bottom: 10px;">
-	<a href="/wlg/setting/event/delete/<%=nid%>" class="btn btn-danger">删除此条活动</a>
+	<a href="/wlg/setting/event/delete/<%=nid%>" class="btn btn-danger">删除</a>
 </div>
 <div class="container" style="width: 720px;">
 	<fieldset>
