--- a/3/plugin/eventsetter/page.rhtml
+++ b/3/plugin/eventsetter/page.rhtml
@@ -1,12 +1,12 @@
 <div style="margin-bottom: 10px;">
-	<a href="/wlg/setting/event/add" class="btn btn-success"><i class="icon-plus-sign"></i>添加活动</a>
+	<a href="/wlg/setting/event/add" class="btn btn-success"><i class="icon-plus-sign"></i>活动</a>
 </div>
 <ol class="breadcrumb">
 	<li>
 	<a href="/wlg/setting/event">活动公告</a> <span class="divider">/</span>
 	</li>
 	<li class="active">
-	活动列表
+	列表
 	</li>
 </ol>
 <div class="container span11 list">
