--- a/3/plugin/affairsetter/delete.rhtml
+++ b/3/plugin/affairsetter/delete.rhtml
@@ -1,12 +1,12 @@
 <div style="margin-bottom: 10px;">
-	<a href="/wlg/setting/affair/add" class="btn btn-success"><i class="icon-plus-sign"></i>添加事务</a>
+	<a href="/wlg/setting/affair/add" class="btn btn-success"><i class="icon-plus-sign"></i>添加</a>
 </div>
 <ol class="breadcrumb">
 	<li>
 	<a href="/wlg/setting/affair">事务公告</a> <span class="divider">/</span>
 	</li>
 	<li class="active">
-	删除事务
+	删除
 	</li>
 </ol>
 <div class="container span11 list">
