--- a/3/plugin/affairsetter/details.rhtml
+++ b/3/plugin/affairsetter/details.rhtml
@@ -1,14 +1,14 @@
 <div style="margin-bottom: 10px;">
-	<a href="/wlg/setting/affair/add" class="btn btn-success"><i class="icon-plus-sign"></i>添加事务</a>
-	<a href="/wlg/setting/affair/edit/<%=nid%>" class="btn btn-success"><i class="icon-edit"></i>修改事务</a>
+	<a href="/wlg/setting/affair/add" class="btn btn-success"><i class="icon-plus-sign"></i>事务</a>
+	<a href="/wlg/setting/affair/edit/<%=nid%>" class="btn btn-success"><i class="icon-edit"></i>事务</a>
 </div>
 <ol class="breadcrumb">
 	<li>
 	<a href="/wlg/setting/affair">事务公告</a> <span class="divider">/</span>
 	</li>
-	<li><a href="/wlg/setting/affair/page">事务列表</a> <span class="divider">/</span></li>
+	<li><a href="/wlg/setting/affair/page">列表</a> <span class="divider">/</span></li>
 	<li class="active">
-	事务详细信息
+	详细信息
 	</li>
 </ol>
 <div class="container span10 offset1">
