--- a/3/plugin/affairsetter/edit.rhtml
+++ b/3/plugin/affairsetter/edit.rhtml
@@ -5,11 +5,11 @@
 	<a href="/wlg/setting/affair">事务公告</a> <span class="divider">/</span>
 	</li>
 	<li class="active">
-	编辑事务
+	编辑
 	</li>
 </ol>
 <div style="margin-bottom: 10px;">
-	<a href="/wlg/setting/affair/delete/<%=nid%>" class="btn btn-danger">删除此条事务</a>
+	<a href="/wlg/setting/affair/delete/<%=nid%>" class="btn btn-danger">删除</a>
 </div>
 <div class="container" style="width: 720px;">
 	<fieldset>
