--- a/3/plugin/eventsetter/details.rhtml
+++ b/3/plugin/eventsetter/details.rhtml
@@ -1,14 +1,14 @@
 <div style="margin-bottom: 10px;">
-	<a href="/wlg/setting/event/add" class="btn btn-success"><i class="icon-plus-sign"></i>添加活动</a>
-	<a href="/wlg/setting/event/edit/<%=nid%>" class="btn btn-success"><i class="icon-edit"></i>修改活动</a>
+	<a href="/wlg/setting/event/add" class="btn btn-success"><i class="icon-plus-sign"></i>活动</a>
+	<a href="/wlg/setting/event/edit/<%=nid%>" class="btn btn-success"><i class="icon-edit"></i>活动</a>
 </div>
 <ol class="breadcrumb">
 	<li>
 	<a href="/wlg/setting/event">活动公告</a> <span class="divider">/</span>
 	</li>
-	<li><a href="/wlg/setting/event/page">活动列表</a> <span class="divider">/</span></li>
+	<li><a href="/wlg/setting/event/page">列表</a> <span class="divider">/</span></li>
 	<li class="active">
-	活动详细信息
+	详细信息
 	</li>
 </ol>
 <div class="container span10 offset1">
