--- a/3/plugin/setter/client_setter.rhtml
+++ b/3/plugin/setter/client_setter.rhtml
@@ -5,12 +5,14 @@
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content=""> 
     <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
+    <link href="/css/general.css" rel="stylesheet" />
     <style type="text/css">
-      body {
-        height: 100%;
+      .container-narrow {
+        margin: 0 auto;
+        max-width: 908px;
       }
       #main-body {
         min-height: 100%;
@@ -18,19 +20,16 @@
         height: 100%;
         margin: 0 auto -60px;
       }
-      #footer {
-        height: 60px;
-        position: fixed;
-        bottom: 0;
+      .list {
+        margin-bottom: 40px;
+      }
+      .list span {
+        float: right;
         color: #999;
       }
-      @media (max-width: 767px) {
-        #footer {
-          margin-left: -20px;
-          margin-right: -20px;
-          padding-left: 20px;
-          padding-right: 20px;
-        }
+      hr {
+        margin-top: 11px;
+        margin-bottom: 11px;
       }
     </style>
 
@@ -42,83 +41,58 @@
   </head>
   <body>
     <div class="container" id="main-body">
-      <div class="span10">
-        <img style="width: 100px; height:auto;" src="img/LOGO.png">
-        <ul class="nav nav-tabs header">
-          <li class="active">
-          <a href="#">Home</a>
-          </li>
-          <li>
-          <a href="#">Profile</a>
-          </li>
-          <li class="disabled">
-          <a href="#">Messages</a>
-          </li>
-          <li class="dropdown pull-right">
-          <a href="#" data-toggle="dropdown" class="dropdown-toggle">Dropdown<strong class="caret"></strong></a>
-          <ul class="dropdown-menu">
-            <li>
-            <a href="#">Action</a>
-            </li>
-            <li>
-            <a href="#">Another action</a>
-            </li>
-            <li>
-            <a href="#">Something else here</a>
-            </li>
-            <li class="divider">
-            </li>
-            <li>
-            <a href="#">Separated link</a>
-            </li>
-          </ul>
-          </li>
-        </ul>
+      <div class="span10 offset1">
+        <div class="navbar navbar-fixed-top navbar-inverse">
+          <div class="navbar-inner text-center">
+            <div class="container-narrow">
+              <a class="brand" href="#">Whlug</a>
+              <ul class="nav">
+                <li class="active"><a href="">首页</a></li>
+                <li><a href="">Whlug介绍</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
         <div class="row-fluid content">
           <div class="span3">
             <ul class="nav nav-list well sidebar">
               <li class="nav-header">
-              List header
-              </li>
-              <li class="active">
-              <a href="#">Home</a>
+              Whlug
               </li>
               <li>
-              <a href="#">Library</a>
+              <a href="/affair">事务公告</a>
               </li>
               <li>
-              <a href="#">Applications</a>
+              <a href="/event">活动公告</a>
+              </li>
+              <li>
+              <a href="/summary">活动回顾</a>
               </li>
               <li class="divider">
               </li>
               <li class="nav-header">
-              Another list header
+              Follow us!
               </li>
-              <li>
-              <a href="#">Profile</a>
-              </li>
-              <li>
-              <a href="#">Settings</a>
-              </li>
-              <li class="divider">
-              </li>
-              <li>
-              <a href="#">Help</a>
-              </li>
+              <a href="#"><img src="/image/rss.jpg" alt="" /></a>
+              <a href="#"><img src="/image/weibo.png" alt="" /></a>
+              <a href="#"><img src="/image/twitter.png" alt="" /></a>
+              <a href="#"><img src="/image/fb.png" alt="" /></a>
+              <a href="#"><img src="/image/mail.png" alt="" /></a>
             </ul>
           </div>
-					<%=content%>
+          <div class="span9">
+						<%=content%>
+          </div>
         </div>
         <div class="span10" id="footer">
           <hr />
-          <p>
-          Wuhan Linux Group
-          </p>
+          <p>&copy; Copyright 2013 Wuhan Linux User Group All Rights Reserved.</p>
         </div>
       </div>
     </div>
-    <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/respond.min.js"></script>
+    <script type="text/javascript" src="/js/jquery.min.js"></script>
+    <script type="text/javascript" src="/bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/bootstrap/js/respond.min.js"></script>
   </body>
 </html>
+
