--- a/3/plugin/eventsetter/details.rhtml
+++ b/3/plugin/eventsetter/details.rhtml
@@ -1,6 +1,6 @@
 <div style="margin-bottom: 10px;">
-	<a href="/wlg/setting/event/add" class="btn btn-success"><i class="icon-plus-sign"></i>活动</a>
-	<a href="/wlg/setting/event/edit/<%=nid%>" class="btn btn-success"><i class="icon-edit"></i>活动</a>
+	<a href="/wlg/setting/event/add" class="btn btn-success"><i class="icon-plus-sign"></i>添加</a>
+	<a href="/wlg/setting/event/edit/<%=nid%>" class="btn btn-success"><i class="icon-edit"></i>修改</a>
 </div>
 <ol class="breadcrumb">
 	<li>
