--- a/3/plugin/setter/admin_setter.rhtml
+++ b/3/plugin/setter/admin_setter.rhtml
@@ -49,10 +49,10 @@
         <div class="navbar navbar-fixed-top navbar-inverse">
           <div class="navbar-inner text-center">
             <div class="container-narrow">
-              <a class="brand" href="#">Whlug</a>
+              <a class="brand" href="/">Whlug</a>
               <ul class="nav">
-                <li class="active"><a href="">首页</a></li>
-                <li><a href="">Whlug介绍</a></li>
+                <li class="active"><a href="/">首页</a></li>
+                <li><a href="/about">Whlug介绍</a></li>
               </ul>
             </div>
           </div>
