--- a/plugin/event/details.rhtml
+++ b/plugin/event/details.rhtml
@@ -52,7 +52,7 @@
 
       <li class="divider-vertical n3"></li>
       <li class="n1 text-center">
-      <a href="#">
+      <a href="/contact">
         联系我们
         <p class="n2">Contact  us</p>
       </a>
