--- a/plugin/event/details.rhtml
+++ b/plugin/event/details.rhtml
@@ -71,7 +71,7 @@
 
 <div class="container-fluid">
   <div class="activity_name">
-    <div class="small"><a href="/activity/">● 活动公告 </a><span class="big">● 正文 ●</span></div>
+    <div class="small"><a href="/affair/"><img src="/image/dot.png"> 活动公告 </a><span class="big"><img src="/image/dot.png"> 正文 <img src="/image/dot.png"></span></div>
   </div>
   <div class="row-fluid activity_contain">
     <div class="span6 offset3  activity_border">
