--- a/plugin/event/page.rhtml
+++ b/plugin/event/page.rhtml
@@ -20,7 +20,7 @@
 
       <li class="divider-vertical n3"></li>
       <li class="n1 text-center">
-      <a href=/affair">
+      <a href="/affair">
         事务
         <p class="n2">Affairs</p>
       </a>
@@ -71,7 +71,8 @@
 
 <div class="container-fluid">
   <div class="activity_name">
-    <div class="big">● 活动公告 ●</div>
+    <!--<div class="big">● 活动公告 ●</div>-->
+    <div class="big"><img src="/image/dot.png"> 活动公告 <img src="/image/dot.png"></div>
   </div>
   <div class="row-fluid activity_contain">
     <div class="span8 offset2  activity_border">
