--- a/plugin/summary/page.rhtml
+++ b/plugin/summary/page.rhtml
@@ -71,7 +71,7 @@
 
 <div class="container-fluid">
   <div class="activity_name">
-    <div class="big">● 活动回顾 ●</div>
+    <div class="big"><img src="/image/dot.png"> 活动回顾 <img src="/image/dot.png"></div>
   </div>
   <div class="row-fluid activity_contain">
     <div class="span8 offset2  activity_border">
