--- a/plugin/summarysetter/page.rhtml
+++ b/plugin/summarysetter/page.rhtml
@@ -17,7 +17,7 @@
 			<hr />
 		<%end%>
 	<%else%>
-		<div>没有事务</div>
+		<div>没有活动回顾</div>
 	<%end%>
 </div>
 <%if !left_page.nil? or !right_page.nil?%>
