--- a/plugin/setter/admin_setter.rhtml
+++ b/plugin/setter/admin_setter.rhtml
@@ -74,14 +74,14 @@
               </li>
               <li class="divider">
               </li>
-              <li class="nav-header">
-              Follow us!
-              </li>
-              <a href="#"><img src="/image/rss.jpg" alt="" /></a>
-              <a href="#"><img src="/image/weibo.png" alt="" /></a>
-              <a href="#"><img src="/image/twitter.png" alt="" /></a>
-              <a href="#"><img src="/image/fb.png" alt="" /></a>
-              <a href="#"><img src="/image/mail.png" alt="" /></a>
+              <!--<li class="nav-header">-->
+              <!--Follow us!-->
+              <!--</li>-->
+              <!--<a href="#"><img src="/image/rss.jpg" alt="" /></a>-->
+              <!--<a href="#"><img src="/image/weibo.png" alt="" /></a>-->
+              <!--<a href="#"><img src="/image/twitter.png" alt="" /></a>-->
+              <!--<a href="#"><img src="/image/fb.png" alt="" /></a>-->
+              <!--<a href="#"><img src="/image/mail.png" alt="" /></a>-->
             </ul>
           </div>
           <div class="span9">
