--- a/plugin/setter/admin_setter.rhtml
+++ b/plugin/setter/admin_setter.rhtml
@@ -52,7 +52,7 @@
               <a class="brand" href="/">Whlug</a>
               <ul class="nav">
                 <li class="active"><a href="/">首页</a></li>
-                <li><a href="/about">Whlug介绍</a></li>
+                <!--<li><a href="/about">Whlug介绍</a></li>-->
               </ul>
             </div>
           </div>
